# powerful_python

./: README.md  generator_log.txt  generators.py  mkdocs.yml  pyproject.toml  test.py
docs/: generators.md
